--- a/AdvancedProgrammingProjectsServer/Views/_ViewImports.cshtml
+++ b/AdvancedProgrammingProjectsServer/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using AdvancedProgrammingProjectsServer
-@using Domain
+@using Domain.DatabaseEntryModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
